# Societyspeaks

./: .dockerignore  .env.brief.example  .env.example  .gitignore  .replit  .replitignore  =0.22.0  =1.14  BRIEFING_UX_IMPROVEMENTS_IMPLEMENTED.md  BRIEFING_V2_COMPLETE.md  CLAUDE.md  CLAUDE_CHANGES_REVIEW.md  CODE_OF_CONDUCT.md  COMMENT_UX_IMPROVEMENTS.md  CONTRIBUTING.md  COPYRIGHT  CSRF_SECURITY_AUDIT_REPORT.md  DAILY_BRIEF_README.md  EDGE_CASES_ANALYSIS.md  EDGE_CASES_HANDLED.md  EDGE_CASES_TIMEZONE_ANALYSIS.md  EMAIL_VOTING_IMPROVEMENTS.md  FINAL_CSRF_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FLAG_SYSTEM_IMPLEMENTATION.md  GROWTH_OPTIMIZATION_ANALYSIS.md  IDEAS.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_COMPLETE.md  LEVERAGING_EXISTING_DATA.md  MAINTAINERS.md  NOTICE  QUICK_START.md  README.md  RESPONSIVE_DESIGN_FIXES.md  SAM_FEEDBACK_INVESTIGATION.md  SECURITY.md  SECURITY_CLEANUP_INSTRUCTIONS.md  SOCIAL_GROWTH_STRATEGY.md  X_DEVELOPER_AGREEMENT_FORM_TEXT.txt  (+16 more)
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md
adr/: 0001-published-vs-audit-vote-semantics.md  README.md
app/: __init__.py  commands.py  db_retry.py  decorators.py  email_subject_msgids_for_extract.py  email_utils.py  middleware.py  models.py  models_legacy.py  resend_client.py  routes.py  scheduler.py  seo.py  storage_utils.py  utils.py  webhook_security.py
attached_assets/: Pasted--2025-02-20-14-55-27-0000-386-INFO-Starting-gunicorn-21-2-0-2025-02-20-14-55-27-0000-386--1740063649838.txt  Pasted--2025-03-14-11-25-35-0000-799-INFO-Starting-gunicorn-21-2-0-2025-03-14-11-25-35-0000-799--1741951581141.txt  Pasted--2025-10-26-13-11-31-0000-1810-INFO-Handling-signal-winch-2025-10-26-13-11-31-0000-1810--1761484656636_1761484656637.txt  Pasted--All-Envs-Since-First-Seen-Filter-events-Events-5k-Users-0-transaction-100-auth-register-url-1-1743431488983.txt  Pasted--AmbiguousForeignKeysError-Can-t-determine-join-between_1768485718358.txt  Pasted--AuthenticationError-Error-code-401-type-error-error-ty_1768139805366.txt  Pasted--Build-Daily-Civic-Question-Wordle-like-daily-participa_1767360440067.txt  Pasted--BuildError-Could-not-build-url-for-endpoint-admin-admi_1768045203100.txt  Pasted--BuildError-Could-not-build-url-for-endpoint-settings-p_1767632316648.txt  (+50 more)
docs/: ADMIN_SUBSCRIPTION_MANAGEMENT.md  DRY_ANALYSIS.md  (+92 more)
(+894 files in other folders)
