[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = ">=3.1.3"
gunicorn = ">=22.0.0"
gevent = ">=23.9.1"
psycogreen = ">=1.0.1"
python-dotenv = ">=1.2.2"
redis = "^5.2.0"
flask-limiter = "^3.13"
feedparser = "^6.0.12"
scikit-learn = "^1.8.0"
openai = "^2.14.0"
atproto = "^0.0.65"
posthog = "^7.4.2"
anthropic = "^0.75.0"
sqlalchemy = "^2.0.45"
tweepy = "^4.16.0"
beautifulsoup4 = "^4.14.3"
stripe = "^14.2.0"
werkzeug = ">=3.1.8"
jinja2 = ">=3.1.5"
cryptography = ">=46.0.4,<47"
pytest = ">=9.0.3"
flask-cors = "^6.0.2"
googlenewsdecoder = "^0.1.7"
bleach = "^6.3.0"
urllib3 = ">=2.6.3"
requests = ">=2.33.0"
pygments = ">=2.20.0"
cachelib = "^0.13.0"
markdown = ">=3.7"
pypdf = ">=4.0.0"
certifi = ">=2024.7.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"